color and z-index fix

--- a/assets/theme/screenplay.css
+++ b/assets/theme/screenplay.css
@@ -15,7 +15,6 @@
     position: relative;
     text-align: left;
     width: 100%;
-    z-index: 200;
     -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.1);
 	-moz-box-shadow: 0 0 5px rgba(0,0,0,0.1);
 	box-shadow: 0 0 5px rgba(0,0,0,0.1);
@@ -23,16 +22,18 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;    
 }
+#screenplay .page h1, #screenplay .page h2, #screenplay .page h3, #screenplay .page h4, #screenplay .page p {color: #222;}
 
 #screenplay.dpi72 .page { font-size: 12px; padding: 72px 72px 72px 108px; }
 #screenplay.dpi100 .page { font-size: 16px; padding: 100px 100px 100px 150px; }
 #screenplay.dpi150 .page { font-size: 33px;  padding: 150px 150px 150px 225px; }
 
+
 #screenplay.dpi72 .page h1,
 #screenplay.dpi72 .page h2,
 #screenplay.dpi72 .page h3,
 #screenplay.dpi72 .page h4,
-#screenplay.dpi72 .page p { font-size: 12px; font-weight: normal; }
+#screenplay.dpi72 .page p { font-size: 12px; font-weight: normal; color: #222;}
 
 #screenplay.dpi100 .page h1,
 #screenplay.dpi100 .page h2,
@@ -69,7 +70,7 @@
 #screenplay.a4.dpi150 .page { height: 1754px; }
 
 /* title page */
-#screenplay .title-page h1 { margin-top: 50%; margin-bottom: 34px; text-align: center; width: 90.5%; }
+#screenplay .title-page h1 {margin-top: 50%;margin-bottom: 34px;text-align: center;width: 90.5%;}
 #screenplay .title-page p.credit { text-align: center; width: 90.5%; }
 #screenplay .title-page p.author,
 #screenplay .title-page p.authors { margin-bottom: 32px; margin-top: 0; text-align: center; width: 90.5%; }
